# Password_manager_rust

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: gui.rs  main.rs  password_manager.rs
