[package]
name = "secure_password_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
argon2 = { version = "0.5.0", features = ["std"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rpassword = "7.2"
winapi = { version = "0.3", features = ["winuser", "windef"] }
csv = "1.1"  # Added CSV crate for importing passwords
copypasta = "0.8.0"  # Added Copypasta crate for clipboard operations
